package keeper

import (
	"context"

	// TODO: Uncomment after proto generation
	// governancev1 "github.com/volnix-protocol/volnix-protocol/proto/gen/go/volnix/governance/v1"
)

// Types are defined in keeper.go to avoid duplication
type MsgServer struct {
	// governancev1.UnimplementedMsgServer
	k *Keeper
}

func NewMsgServer(k *Keeper) MsgServer {
	return MsgServer{k: k}
}

// SubmitProposal submits a new governance proposal
// According to whitepaper: proposals require WRT deposit
// TODO: Implement after proto generation
func (s MsgServer) SubmitProposal(ctx context.Context, req interface{}) (interface{}, error) {
	// sdkCtx := sdk.UnwrapSDKContext(ctx)

	// TODO: Replace with actual proto message after generation
	// req := msg.(*governancev1.MsgSubmitProposal)
	
	// Validate request
	// if req.Proposer == "" {
	// 	return nil, types.ErrEmptyProposer
	// }
	// if req.Title == "" {
	// 	return nil, types.ErrEmptyTitle
	// }
	// if req.Description == "" {
	// 	return nil, types.ErrEmptyDescription
	// }

	// Get next proposal ID
	// proposalID := s.k.GetNextProposalID(sdkCtx)
	// s.k.SetNextProposalID(sdkCtx, proposalID+1)

	// Get governance parameters
	// params := s.k.GetParams(sdkCtx)

	// Validate deposit
	// deposit, err := strconv.ParseUint(req.Deposit, 10, 64)
	// if err != nil {
	// 	return nil, types.ErrInvalidDeposit
	// }
	// minDeposit, err := strconv.ParseUint(params.MinDeposit, 10, 64)
	// if err != nil {
	// 	return nil, fmt.Errorf("invalid min deposit parameter: %w", err)
	// }
	// if deposit < minDeposit {
	// 	return nil, types.ErrInsufficientDeposit
	// }

	// Create proposal
	// proposal := &governancev1.Proposal{
	// 	ProposalId:      proposalID,
	// 	Proposer:        req.Proposer,
	// 	ProposalType:    req.ProposalType,
	// 	Title:           req.Title,
	// 	Description:     req.Description,
	// 	Status:          governancev1.ProposalStatus_PROPOSAL_STATUS_SUBMITTED,
	// 	SubmitTime:      timestamppb.Now(),
	// 	VotingStartTime: timestamppb.New(sdkCtx.BlockTime().Add(time.Hour)), // Start voting in 1 hour
	// 	VotingPeriod:    &params.VotingPeriod,
	// 	VotingEndTime:   timestamppb.New(sdkCtx.BlockTime().Add(params.VotingPeriod)),
	// 	TimelockPeriod:  &params.TimelockPeriod,
	// 	ParameterChanges: req.ParameterChanges,
	// 	YesVotes:        "0",
	// 	NoVotes:         "0",
	// 	AbstainVotes:    "0",
	// 	TotalVotes:      "0",
	// }

	// Validate parameter changes
	// for _, change := range req.ParameterChanges {
	// 	if !types.IsGovernable(change.Module, change.Parameter) {
	// 		return nil, types.ErrConstitutionalParameter
	// 	}
	// }

	// Store proposal
	// if err := s.k.SetProposal(sdkCtx, proposal); err != nil {
	// 	return nil, err
	// }

	// TODO: Return actual response after proto generation
	// return &governancev1.MsgSubmitProposalResponse{
	// 	ProposalId: proposalID,
	// }, nil
	
	return map[string]interface{}{
		"proposal_id": uint64(0), // TODO: Return actual proposal ID after implementation
	}, nil
}

// Vote votes on a proposal
// According to whitepaper: "Право голоса в этом DAO принадлежит исключительно держателям WRT"
// TODO: Implement after proto generation
func (s MsgServer) Vote(ctx context.Context, req interface{}) (interface{}, error) {
	// sdkCtx := sdk.UnwrapSDKContext(ctx)

	// TODO: Replace with actual proto message after generation
	// req := msg.(*governancev1.MsgVote)

	// Validate request
	// if req.ProposalId == 0 {
	// 	return nil, fmt.Errorf("proposal ID cannot be zero")
	// }
	// if req.Voter == "" {
	// 	return nil, fmt.Errorf("voter cannot be empty")
	// }

	// Get proposal
	// proposal, err := s.k.GetProposal(sdkCtx, req.ProposalId)
	// if err != nil {
	// 	return nil, err
	// }

	// Check if proposal is in voting period
	// if proposal.Status != governancev1.ProposalStatus_PROPOSAL_STATUS_VOTING {
	// 	if proposal.Status == governancev1.ProposalStatus_PROPOSAL_STATUS_SUBMITTED {
	// 		// Start voting if it's time
	// 		if sdkCtx.BlockTime().After(proposal.VotingStartTime.AsTime()) {
	// 			proposal.Status = governancev1.ProposalStatus_PROPOSAL_STATUS_VOTING
	// 			s.k.SetProposal(sdkCtx, proposal)
	// 		} else {
	// 			return nil, types.ErrProposalNotInVotingPeriod
	// 		}
	// 	} else {
	// 		return nil, types.ErrProposalNotInVotingPeriod
	// 	}
	// }

	// Check if already voted
	// _, err = s.k.GetVote(sdkCtx, req.ProposalId, req.Voter)
	// if err == nil {
	// 	return nil, types.ErrVoteAlreadyExists
	// }

	// Calculate voting power based on WRT balance
	// votingPower, err := s.k.CalculateVotingPower(sdkCtx, req.Voter)
	// if err != nil {
	// 	return nil, err
	// }

	// Create vote
	// vote := &governancev1.Vote{
	// 	ProposalId:  req.ProposalId,
	// 	Voter:       req.Voter,
	// 	Option:      req.Option,
	// 	VotingPower: votingPower,
	// 	VoteTime:    timestamppb.Now(),
	// }

	// Store vote
	// if err := s.k.SetVote(sdkCtx, vote); err != nil {
	// 	return nil, err
	// }

	// Tally votes
	// if err := s.k.TallyVotes(sdkCtx, req.ProposalId); err != nil {
	// 	return nil, err
	// }

	// TODO: Return actual response after proto generation
	// return &governancev1.MsgVoteResponse{
	// 	Success: true,
	// }, nil

	return map[string]interface{}{
		"success": true,
	}, nil
}

// ExecuteProposal executes a passed proposal (after timelock)
// TODO: Implement after proto generation
func (s MsgServer) ExecuteProposal(ctx context.Context, req interface{}) (interface{}, error) {
	// sdkCtx := sdk.UnwrapSDKContext(ctx)

	// TODO: Replace with actual proto message after generation
	// req := msg.(*governancev1.MsgExecuteProposal)

	// Validate request
	// if req.ProposalId == 0 {
	// 	return nil, fmt.Errorf("proposal ID cannot be zero")
	// }

	// Check if proposal can be executed
	// canExecute, err := s.k.CanExecuteProposal(sdkCtx, req.ProposalId)
	// if err != nil {
	// 	return nil, err
	// }
	// if !canExecute {
	// 	return nil, types.ErrProposalNotExecutable
	// }

	// Get proposal
	// proposal, err := s.k.GetProposal(sdkCtx, req.ProposalId)
	// if err != nil {
	// 	return nil, err
	// }

	// Check if already executed
	// if proposal.Status == governancev1.ProposalStatus_PROPOSAL_STATUS_EXECUTED {
	// 	return nil, types.ErrProposalAlreadyExecuted
	// }

	// Execute parameter changes
	// for _, change := range proposal.ParameterChanges {
	// 	// Validate parameter change
	// 	if err := s.k.ValidateParameterChange(sdkCtx, change); err != nil {
	// 		return nil, fmt.Errorf("invalid parameter change: %w", err)
	// 	}
	// 	
	// 	// Get appropriate module keeper (would need to be passed or retrieved)
	// 	// For now, this is a placeholder
	// 	// if err := s.k.ApplyParameterChange(sdkCtx, change, moduleKeeper); err != nil {
	// 	// 	return nil, fmt.Errorf("failed to apply parameter change: %w", err)
	// 	// }
	// }

	// Update proposal status
	// proposal.Status = governancev1.ProposalStatus_PROPOSAL_STATUS_EXECUTED
	// if err := s.k.SetProposal(sdkCtx, proposal); err != nil {
	// 	return nil, err
	// }

	// TODO: Return actual response after proto generation
	// return &governancev1.MsgExecuteProposalResponse{
	// 	Success: true,
	// }, nil

	return map[string]interface{}{
		"success": true,
	}, nil
}

